tree-sitter-wheeler/test/corpus/wheeler_source.txt
==================
Classical reversible class
==================

classical class Counter {
  state long count = 0;
  rev void increment() { count += 1; }
  test void remembers(long input) cases(-1, 0, 1) tags(fast, compiler.parser)
      limits(steps = 100, history = 100) {
    assert(input == input);
  }
  entry void main() {
    increment();
    reverse { increment(); }
    assert(count == 0);
  }
}

---

(source_file
  (class_declaration
    (computation_domain)
    (identifier)
    (class_body
      (member_declaration
        (state_declaration
          (identifier)
          (constant_expression
            (expression
              (integer_literal)))))
      (member_declaration
        (method_declaration
          (method_modifier)
          (identifier)
          (parameter_list)
          (block
            (statement
              (assignment_statement
                (identifier)
                (expression
                  (integer_literal)))))))
      (member_declaration
        (method_declaration
          (method_modifier)
          (identifier)
          (parameter_list
            (parameter
              (value_type)
              (identifier)))
          (test_case_list
            (test_case
              (integer_literal))
            (test_case
              (integer_literal))
            (test_case
              (integer_literal)))
          (test_tag_list
            (test_tag
              (identifier))
            (test_tag
              (identifier)
              (identifier)))
          (test_limit_list
            (integer_literal)
            (integer_literal))
          (block
            (statement
              (assert_statement
                (expression
                  (binary_expression
                    (expression
                      (identifier))
                    (expression
                      (identifier)))))))))
      (member_declaration
        (method_declaration
          (method_modifier)
          (identifier)
          (parameter_list)
          (block
            (statement
              (call_statement
                (call_expression
                  (identifier))))
            (statement
              (reverse_statement
                (block
                  (statement
                    (call_statement
                      (call_expression
                        (identifier)))))))
            (statement
              (assert_statement
                (expression
                  (binary_expression
                    (expression
                      (identifier))
                    (expression
                      (integer_literal))))))))))))

==================
Quantum class
==================

quantum class Bell {
  state long measured = 0;
  qreg q = new qreg(2);
  unitary void bell() {
    H(q[0]);
    CNOT(q[0], q[1]);
  }
  entry void main() {
    prepare(q, 0);
    bell();
    measured = measure(q);
  }
}

---

(source_file
  (class_declaration
    (computation_domain)
    (identifier)
    (class_body
      (member_declaration
        (state_declaration
          (identifier)
          (constant_expression
            (expression
              (integer_literal)))))
      (member_declaration
        (qreg_declaration
          (identifier)
          (constant_expression
            (expression
              (integer_literal)))))
      (member_declaration
        (method_declaration
          (method_modifier)
          (identifier)
          (parameter_list)
          (block
            (statement
              (call_statement
                (call_expression
                  (identifier)
                  (argument_list
                    (expression
                      (array_access_expression
                        (expression
                          (identifier))
                        (expression
                          (integer_literal))))))))
            (statement
              (call_statement
                (call_expression
                  (identifier)
                  (argument_list
                    (expression
                      (array_access_expression
                        (expression
                          (identifier))
                        (expression
                          (integer_literal))))
                    (expression
                      (array_access_expression
                        (expression
                          (identifier))
                        (expression
                          (integer_literal)))))))))))
      (member_declaration
        (method_declaration
          (method_modifier)
          (identifier)
          (parameter_list)
          (block
            (statement
              (call_statement
                (call_expression
                  (identifier)
                  (argument_list
                    (expression
                      (identifier))
                    (expression
                      (integer_literal))))))
            (statement
              (call_statement
                (call_expression
                  (identifier))))
            (statement
              (assignment_statement
                (identifier)
                (expression
                  (call_expression
                    (identifier)
                    (argument_list
                      (expression
                        (identifier)))))))))))))

==================
Malformed delimiter recovery
==================

classical class Broken {
  state long value = 0
  entry void main() {
    value ^= 1;
}

---

(source_file
  (class_declaration
    (computation_domain)
    (identifier)
    (class_body
      (member_declaration
        (state_declaration
          (identifier)
          (constant_expression
            (expression
              (integer_literal)))
          (MISSING ";")))
      (member_declaration
        (method_declaration
          (method_modifier)
          (identifier)
          (parameter_list)
          (block
            (statement
              (assignment_statement
                (identifier)
                (expression
                  (integer_literal)))))))
      (MISSING "}"))))

==================
Bounded local control flow
==================

classical class Control {
  state long sum = 0;
  entry void main() {
    long i = 0;
    while (i < 5) limit 5 {
      i += 1;
      if (i < 2) { continue; }
      sum += i;
      if (i == 4) { break; }
    }
    boolean complete = sum == 10;
    if (complete) { sum = 1; } else { sum = 2; }
  }
}

---

(source_file
  (class_declaration
    (computation_domain)
    (identifier)
    (class_body
      (member_declaration
        (state_declaration
          (identifier)
          (constant_expression
            (expression
              (integer_literal)))))
      (member_declaration
        (method_declaration
          (method_modifier)
          (identifier)
          (parameter_list)
          (block
            (statement
              (local_declaration
                (value_type)
                (identifier)
                (expression
                  (integer_literal))))
            (statement
              (while_statement
                (expression
                  (binary_expression
                    (expression
                      (identifier))
                    (expression
                      (integer_literal))))
                (expression
                  (integer_literal))
                (block
                  (statement
                    (assignment_statement
                      (identifier)
                      (expression
                        (integer_literal))))
                  (statement
                    (if_statement
                      (expression
                        (binary_expression
                          (expression
                            (identifier))
                          (expression
                            (integer_literal))))
                      (block
                        (statement
                          (continue_statement)))))
                  (statement
                    (assignment_statement
                      (identifier)
                      (expression
                        (identifier))))
                  (statement
                    (if_statement
                      (expression
                        (binary_expression
                          (expression
                            (identifier))
                          (expression
                            (integer_literal))))
                      (block
                        (statement
                          (break_statement))))))))
            (statement
              (local_declaration
                (value_type)
                (identifier)
                (expression
                  (binary_expression
                    (expression
                      (identifier))
                    (expression
                      (integer_literal))))))
            (statement
              (if_statement
                (expression
                  (identifier))
                (block
                  (statement
                    (assignment_statement
                      (identifier)
                      (expression
                        (integer_literal)))))
                (block
                  (statement
                    (assignment_statement
                      (identifier)
                      (expression
                        (integer_literal)))))))))))))

==================
Typed value function
==================

classical class Values {
  long add(long left, long right) {
    return left + right * 2;
  }
  boolean same(boolean left, boolean right) {
    return left == right;
  }
  entry void main() {
    long result = add(2, 3);
    boolean valid = same(true, true);
  }
}

---

(source_file
  (class_declaration
    (computation_domain)
    (identifier)
    (class_body
      (member_declaration
        (method_declaration
          (value_type)
          (identifier)
          (parameter_list
            (parameter
              (value_type)
              (identifier))
            (parameter
              (value_type)
              (identifier)))
          (block
            (statement
              (return_statement
                (expression
                  (binary_expression
                    (expression
                      (identifier))
                    (expression
                      (binary_expression
                        (expression
                          (identifier))
                        (expression
                          (integer_literal)))))))))))
      (member_declaration
        (method_declaration
          (value_type)
          (identifier)
          (parameter_list
            (parameter
              (value_type)
              (identifier))
            (parameter
              (value_type)
              (identifier)))
          (block
            (statement
              (return_statement
                (expression
                  (binary_expression
                    (expression
                      (identifier))
                    (expression
                      (identifier)))))))))
      (member_declaration
        (method_declaration
          (method_modifier)
          (identifier)
          (parameter_list)
          (block
            (statement
              (local_declaration
                (value_type)
                (identifier)
                (expression
                  (call_expression
                    (identifier)
                    (argument_list
                      (expression
                        (integer_literal))
                      (expression
                        (integer_literal)))))))
            (statement
              (local_declaration
                (value_type)
                (identifier)
                (expression
                  (call_expression
                    (identifier)
                    (argument_list
                      (expression
                        (boolean_literal))
                      (expression
                        (boolean_literal)))))))))))))

==================
Bounded for control
==================

classical class ForControl {
  state long sum = 0;
  entry void main() {
    for (long i = 0; i < 5; i += 1) limit 5 {
      if (i < 2) { continue; }
      sum += i;
      if (i == 4) { break; }
    }
  }
}

---

(source_file
  (class_declaration
    (computation_domain)
    (identifier)
    (class_body
      (member_declaration
        (state_declaration
          (identifier)
          (constant_expression
            (expression
              (integer_literal)))))
      (member_declaration
        (method_declaration
          (method_modifier)
          (identifier)
          (parameter_list)
          (block
            (statement
              (for_statement
                (local_declaration
                  (value_type)
                  (identifier)
                  (expression
                    (integer_literal)))
                (expression
                  (binary_expression
                    (expression
                      (identifier))
                    (expression
                      (integer_literal))))
                (assignment_expression
                  (identifier)
                  (expression
                    (integer_literal)))
                (expression
                  (integer_literal))
                (block
                  (statement
                    (if_statement
                      (expression
                        (binary_expression
                          (expression
                            (identifier))
                          (expression
                            (integer_literal))))
                      (block
                        (statement
                          (continue_statement)))))
                  (statement
                    (assignment_statement
                      (identifier)
                      (expression
                        (identifier))))
                  (statement
                    (if_statement
                      (expression
                        (binary_expression
                          (expression
                            (identifier))
                          (expression
                            (integer_literal))))
                      (block
                        (statement
                          (break_statement))))))))))))))

==================
Nominal value records
==================

classical class Records {
  record Span(long start, long end) {}
  record Token(Span span, boolean valid) {}
  state long width = 0;
  Token token(Span span) { return new Token(span, true); }
  entry void main() {
    Token value = token(new Span(3, 8));
    width = value.span.end - value.span.start;
  }
}

---

(source_file
  (class_declaration
    (computation_domain)
    (identifier)
    (class_body
      (member_declaration
        (record_declaration
          (identifier)
          (record_component
            (value_type)
            (identifier))
          (record_component
            (value_type)
            (identifier))))
      (member_declaration
        (record_declaration
          (identifier)
          (record_component
            (value_type
              (type_identifier))
            (identifier))
          (record_component
            (value_type)
            (identifier))))
      (member_declaration
        (state_declaration
          (identifier)
          (constant_expression
            (expression
              (integer_literal)))))
      (member_declaration
        (method_declaration
          (value_type
            (type_identifier))
          (identifier)
          (parameter_list
            (parameter
              (value_type
                (type_identifier))
              (identifier)))
          (block
            (statement
              (return_statement
                (expression
                  (record_creation
                    (value_type
                      (type_identifier))
                    (argument_list
                      (expression
                        (identifier))
                      (expression
                        (boolean_literal))))))))))
      (member_declaration
        (method_declaration
          (method_modifier)
          (identifier)
          (parameter_list)
          (block
            (statement
              (local_declaration
                (value_type
                  (type_identifier))
                (identifier)
                (expression
                  (call_expression
                    (identifier)
                    (argument_list
                      (expression
                        (record_creation
                          (value_type
                            (type_identifier))
                          (argument_list
                            (expression
                              (integer_literal))
                            (expression
                              (integer_literal))))))))))
            (statement
              (assignment_statement
                (identifier)
                (expression
                  (binary_expression
                    (expression
                      (field_expression
                        (expression
                          (field_expression
                            (expression
                              (identifier))
                            (identifier)))
                        (identifier)))
                    (expression
                      (field_expression
                        (expression
                          (field_expression
                            (expression
                              (identifier))
                            (identifier)))
                        (identifier)))))))))))))

==================
Exhaustive tagged variants
==================

classical class Variants {
  variant LookupResult {
    case Missing();
    case Found(long value);
  }
  state long selected = 0;
  entry void main() {
    LookupResult value = new LookupResult.Found(9);
    match (value) {
      case LookupResult.Missing() { selected = 0; }
      case LookupResult.Found(long payload) { selected = payload; }
    }
  }
}

---

(source_file
  (class_declaration
    (computation_domain)
    (identifier)
    (class_body
      (member_declaration
        (variant_declaration
          (identifier)
          (variant_case_declaration
            (identifier))
          (variant_case_declaration
            (identifier)
            (record_component
              (value_type)
              (identifier)))))
      (member_declaration
        (state_declaration
          (identifier)
          (constant_expression
            (expression
              (integer_literal)))))
      (member_declaration
        (method_declaration
          (method_modifier)
          (identifier)
          (parameter_list)
          (block
            (statement
              (local_declaration
                (value_type
                  (type_identifier))
                (identifier)
                (expression
                  (record_creation
                    (value_type
                      (type_identifier))
                    (identifier)
                    (argument_list
                      (expression
                        (integer_literal)))))))
            (statement
              (match_statement
                (expression
                  (identifier))
                (match_case
                  (value_type
                    (type_identifier))
                  (identifier)
                  (parameter_list)
                  (block
                    (statement
                      (assignment_statement
                        (identifier)
                        (expression
                          (integer_literal))))))
                (match_case
                  (value_type
                    (type_identifier))
                  (identifier)
                  (parameter_list
                    (parameter
                      (value_type)
                      (identifier)))
                  (block
                    (statement
                      (assignment_statement
                        (identifier)
                        (expression
                          (identifier))))))))))))))

==================
Fixed value arrays
==================

classical class Arrays {
  state long selected = 0;
  long total(long[3] values) { return values[0] + values[1] + values[2]; }
  entry void main() {
    long[3] values = new long[3](2, 4, 6);
    long[] middle = slice(values, 1, 2);
    selected = middle[0];
  }
}

---

(source_file
  (class_declaration
    (computation_domain)
    (identifier)
    (class_body
      (member_declaration
        (state_declaration
          (identifier)
          (constant_expression
            (expression
              (integer_literal)))))
      (member_declaration
        (method_declaration
          (value_type)
          (identifier)
          (parameter_list
            (parameter
              (value_type
                (array_extent
                  (integer_literal)))
              (identifier)))
          (block
            (statement
              (return_statement
                (expression
                  (binary_expression
                    (expression
                      (binary_expression
                        (expression
                          (array_access_expression
                            (expression
                              (identifier))
                            (expression
                              (integer_literal))))
                        (expression
                          (array_access_expression
                            (expression
                              (identifier))
                            (expression
                              (integer_literal))))))
                    (expression
                      (array_access_expression
                        (expression
                          (identifier))
                        (expression
                          (integer_literal)))))))))))
      (member_declaration
        (method_declaration
          (method_modifier)
          (identifier)
          (parameter_list)
          (block
            (statement
              (local_declaration
                (value_type
                  (array_extent
                    (integer_literal)))
                (identifier)
                (expression
                  (record_creation
                    (value_type
                      (array_extent
                        (integer_literal)))
                    (argument_list
                      (expression
                        (integer_literal))
                      (expression
                        (integer_literal))
                      (expression
                        (integer_literal)))))))
            (statement
              (local_declaration
                (value_type
                  (array_extent))
                (identifier)
                (expression
                  (call_expression
                    (identifier)
                    (argument_list
                      (expression
                        (identifier))
                      (expression
                        (integer_literal))
                      (expression
                        (integer_literal)))))))
            (statement
              (assignment_statement
                (identifier)
                (expression
                  (array_access_expression
                    (expression
                      (identifier))
                    (expression
                      (integer_literal))))))))))))
